Allow VM parameters to be configured. By default, increase max PermGen size, and user Server VM. Log the full command line.