@@ -11,8 +11,10 @@ import java.io.File;
 
 public class SbtApplicationSettings {
     private static final String DEFAULT_SBT_LAUNCHER = canonicalPathTo(new File(System.getProperty("user.home"), "bin/sbt-launch.jar"));
+    private static final String DEFAULT_SBT_VM_PARAMETERS = "-server -Xmx512M -XX:MaxPermSize=256M";
 
     private String sbtLauncherJarPath = DEFAULT_SBT_LAUNCHER;
+    private String sbtLauncherVmParameters = DEFAULT_SBT_VM_PARAMETERS;
 
     public String getSbtLauncherJarPath() {
         return sbtLauncherJarPath;
@@ -24,6 +26,14 @@ public class SbtApplicationSettings {
 
     private static String canonicalPathTo(File file) {
         return PathUtil.getCanonicalPath(file.getAbsolutePath());
+    }
+
+    public String getSbtLauncherVmParameters() {
+        return sbtLauncherVmParameters;
+    }
+
+    public void setSbtLauncherVmParameters(String sbtLauncherVmParameters) {
+        this.sbtLauncherVmParameters = sbtLauncherVmParameters;
     }
 
     public boolean equals(Object obj) {
